# git-repo-checker

./: .gitignore  README.md  config.example.yml  pyproject.toml  repos.example.yml  repos.yml
.claude/plans/: current-plan.md
src/git_repo_checker/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  git_ops.py  github_ops.py  models.py  reporter.py  scanner.py  schedule.py  sync.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_git_ops.py  test_github_ops.py  test_models.py  test_reporter.py  test_scanner.py  test_schedule.py  test_sync.py
